refactor: implements sqs and opensearch
